test/message/fail/class-accessors-private-undefined-setter-nested.out
# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:7: TypeError: Cannot read private member #a from an object whose class did not declare it
  getA(obj) { return obj.#a; }
                         ^
TypeError: Cannot read private member #a from an object whose class did not declare it
    at C.getA (*%(basename)s:7:26)
    at new C (*%(basename)s:13:10)
    at *%(basename)s:17:1
